tablero clompleto listo

--- a/chess/index.html
+++ b/chess/index.html
@@ -9,8 +9,10 @@
         <h1>Ajedrez Automático</h1>
     </div>
     
-    <div class="chess-board">
-        <!-- Las casillas se generarán con JavaScript -->
+    <div class="board-container">
+        <div class="chess-board" id="chess-board">
+            <!-- Las casillas se generarán dinámicamente -->
+        </div>
     </div>
     
     <div id="status"></div>
